# ThreeKingdomMasterIOS

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  portraits-checklist.md  vite.config.ts  wujiang-portrait-forge.html
.claude/: settings.local.json
api/: leaderboard.js
docs/: CATALOG.md  GUIDE.md  worklist-2026-07-20-night.md
e2e/: boutPanels.spec.ts  growth.spec.ts  institutions.spec.ts  specialty.spec.ts  statecraft.spec.ts
public/audio/: README.md
public/battle/: README.md
public/duel-campaigns/: PROMPTS.md  README.md
public/endings/: PROMPTS.md  README.md
public/models/duel/: Dodging.fbx  Jump.fbx  Quick Roll To Run.fbx  README.md  X Bot.fbx  crouch idle.fbx  crouch to standing idle.fbx  standing block idle.fbx  standing block react large.fbx  standing disarm over shoulder.fbx  standing disarm underarm.fbx  standing idle looking ver. 1.fbx  standing idle looking ver. 2.fbx  standing idle.fbx  standing jump.fbx  standing melee attack 360 high.fbx  standing melee attack 360 low.fbx  standing melee attack backhand.fbx  standing melee attack downward.fbx  standing melee attack horizontal.fbx  standing melee attack kick ver. 1.fbx  (+31 more)
public/popups/: PROMPTS.md  README.md
public/scenarios/: PROMPTS.md  README.md
scripts/: balance-campaign.ts  balance-stratagem.ts  balance-tactical.ts  gen-catalog.ts  import-portraits.py  soak-internal-affairs.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src/ui/: i18n.ts  renderQuality.ts  theme.ts  uiPrefs.ts  zIndex.ts
(+1218 files in other folders)
